; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_git_path_check_eol.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_git_path_check_eol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_check_item = type { i8* }

@.str = private unnamed_addr constant [3 x i8] c"lf\00", align 1
@EOL_LF = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"crlf\00", align 1
@EOL_CRLF = common dso_local global i32 0, align 4
@EOL_UNSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.attr_check_item*)* @git_path_check_eol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @git_path_check_eol(%struct.attr_check_item* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.attr_check_item*, align 8
  %4 = alloca i8*, align 8
  store %struct.attr_check_item* %0, %struct.attr_check_item** %3, align 8
  %5 = load %struct.attr_check_item*, %struct.attr_check_item** %3, align 8
  %6 = getelementptr inbounds %struct.attr_check_item, %struct.attr_check_item* %5, i32 0, i32 0
  %7 = load i8*, i8** %6, align 8
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @ATTR_UNSET(i8* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %26

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @strcmp(i8* %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* @EOL_LF, align 4
  store i32 %17, i32* %2, align 4
  br label %28

18:                                               ; preds = %12
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @strcmp(i8* %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %24, label %22

22:                                               ; preds = %18
  %23 = load i32, i32* @EOL_CRLF, align 4
  store i32 %23, i32* %2, align 4
  br label %28

24:                                               ; preds = %18
  br label %25

25:                                               ; preds = %24
  br label %26

26:                                               ; preds = %25, %11
  %27 = load i32, i32* @EOL_UNSET, align 4
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %26, %22, %16
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @ATTR_UNSET(i8*) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
